18.04.26 Create openCage integration.