@@ -2,7 +2,6 @@ package me.rentapp.service;
 
 import me.rentapp.dto.OpenCageComponents;
 import me.rentapp.dto.OpenCageResponse;
-import me.rentapp.dto.OpenCageResult;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
@@ -10,29 +9,36 @@ import java.util.Optional;
 import java.util.function.Function;
 
 @Component
-public class LocalityExtractor {
+public class LocationExtractor {
 
-    private static final List<Function<OpenCageComponents, String>> FALLBACK_CHAIN = List.of(
+    private static final List<Function<OpenCageComponents, String>> NORMALIZED_CITY = List.of(
             OpenCageComponents::getCity,
             OpenCageComponents::getTown,
+            OpenCageComponents::getTownship,
             OpenCageComponents::getVillage,
             OpenCageComponents::getHamlet,
             OpenCageComponents::getMunicipality,
             OpenCageComponents::getSuburb,
-            OpenCageComponents::getCounty
+            OpenCageComponents::getCounty,
+            OpenCageComponents::getIsland
     );
 
     public Optional<String> extract(OpenCageResponse response) {
         if (response == null || response.getResults() == null || response.getResults().isEmpty()) {
             return Optional.empty();
         }
-        OpenCageResult first = response.getResults().get(0);
+        OpenCageResponse.Result first = response.getResults().getFirst();
         if (first == null || first.getComponents() == null) {
             return Optional.empty();
         }
         OpenCageComponents components = first.getComponents();
-        return FALLBACK_CHAIN.stream()
-                .map(getter -> getter.apply(components))
+        String normalizedCity = components.getNormalizedCity();
+        if (normalizedCity != null && !normalizedCity.isBlank()) {
+            return Optional.of(normalizedCity);
+        }
+
+        return NORMALIZED_CITY.stream()
+                .map(it -> it.apply(components))
                 .filter(value -> value != null && !value.isBlank())
                 .findFirst();
     }
